--- a/configs/thirtythreeforty_businesscard_defconfig
+++ b/configs/thirtythreeforty_businesscard_defconfig
@@ -20,8 +20,8 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_BUSINESSCARD_PATH)/board/businesscard/v1/genimage.cfg"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git://github.com/thirtythreeforty/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="0258e33350a156ae82c2fe49f58ea63b6fc459e6"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git://github.com/tverdonck/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="fe39d1d28fb4130b0dc030913b18e66d6fd069cb"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_BUSINESSCARD_PATH)/board/businesscard/v1/linux_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
@@ -47,8 +47,8 @@ BR2_TARGET_ROOTFS_SQUASHFS4_XZ=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="git://github.com/thirtythreeforty/u-boot.git"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="e9a861c19c620224f5c1224cd7033b02adb8fa4d"
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="git://github.com/tverdonck/u-boot.git"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="d7eb3a4f7ff3dd5b91dbea2159edda04dbd944a9"
 BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_BUSINESSCARD_PATH)/board/businesscard/v1/uboot_defconfig"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
